fix: review date should be right-aligned if have space

--- a/src/styles/components/course-card.scss
+++ b/src/styles/components/course-card.scss
@@ -233,9 +233,6 @@
   }
 }
 
-.review-header {
-  flex-direction: column;
-}
 .reviews-section {
   width: 95%;
   margin: auto;
